// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test car data retrieval should get 2 cars from db 1`] = `
Object {
  "data": Array [
    Object {
      "company_id": null,
      "dkn": "CA4918KM",
      "id": 4601,
      "mark_name": "Volkswagen",
      "model_name": "Passat",
      "person_id": null,
      "produce_year": "1992",
      "rama": "YGHJHKLLOLIHGHG",
    },
    Object {
      "company_id": null,
      "dkn": "CA7474KA",
      "id": 4602,
      "mark_name": "Audi",
      "model_name": "A8",
      "person_id": null,
      "produce_year": "2008",
      "rama": "WVWEZZZ1HZRW206119",
    },
  ],
  "total": 1376287,
}
`;

exports[`Test car data retrieval should get a car from db 1`] = `
Object {
  "data": Object {
    "company_id": null,
    "dkn": "CA4918KM",
    "id": 4601,
    "mark_name": "Volkswagen",
    "model_name": "Passat",
    "person_id": null,
    "produce_year": "1992",
    "rama": "YGHJHKLLOLIHGHG",
  },
}
`;

exports[`Test car data retrieval should get cars from db with pagination 1`] = `
Object {
  "data": Array [
    Object {
      "company_id": null,
      "dkn": "CA4918KM",
      "id": 4601,
      "mark_name": "Volkswagen",
      "model_name": "Passat",
      "person_id": null,
      "produce_year": "1992",
      "rama": "YGHJHKLLOLIHGHG",
    },
    Object {
      "company_id": null,
      "dkn": "CA7474KA",
      "id": 4602,
      "mark_name": "Audi",
      "model_name": "A8",
      "person_id": null,
      "produce_year": "2008",
      "rama": "WVWEZZZ1HZRW206119",
    },
  ],
  "total": 1376287,
}
`;

exports[`Test car data retrieval should get cars from db with sorting 1`] = `
Object {
  "data": Array [
    Object {
      "company_id": null,
      "dkn": "CA4918KM",
      "id": 4601,
      "mark_name": "Volkswagen",
      "model_name": "Passat",
      "person_id": null,
      "produce_year": "1992",
      "rama": "YGHJHKLLOLIHGHG",
    },
    Object {
      "company_id": null,
      "dkn": "CA7474KA",
      "id": 4602,
      "mark_name": "Audi",
      "model_name": "A8",
      "person_id": null,
      "produce_year": "2008",
      "rama": "WVWEZZZ1HZRW206119",
    },
  ],
  "total": 1376287,
}
`;
